[gd_scene load_steps=2 format=3 uid="uid://button_mapper_001"]

[ext_resource type="Script" path="res://ButtonMapper.gd" id="1_mapper"]

[node name="ButtonMapper" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mapper")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.8)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -300.0
offset_right = 300.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Button Mapper"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ControllerLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Controller: Not detected"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="ActionList" type="ItemList" parent="VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 200)

[node name="StatusLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Select an action to remap"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RemapButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 60)
text = "Start Remap"

[node name="ResetButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 60)
text = "Reset to Default"

[node name="CloseButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 60)
text = "Close"

